running_a_k8s_ingress_kustomize/kubernetes/overlays/ingress/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: service1and2
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
    - host: localhost
      http:
        paths:
          - backend:
              service:
                name: service1
                port:
                  number: 80
            path: /first
            pathType: Prefix
          - backend:
              service:
                name: service2
                port:
                  number: 80
            path: /second
            pathType: Prefix
